# rustbot

./: Cargo.toml  Dockerfile  LICENSE  README.md
data/: cities_tz.toml
locales/: en.toml  ru.toml
src/: main.rs
static/: index.html
