[package]
name = "my_rust_bot"
version = "0.1.0"
edition = "2021" # Единственная адекватно работающая редакция для данной версии раста

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6"
actix = "0.13"
actix-web-actors = "4.3" 
teloxide = { version = "0.15", features = ["macros", "ctrlc_handler", "rustls"] }
serde = { version = "1.0", features = ["derive"] } # Нужен для десериализации
serde_json = "1.0" # Уже есть, используется для /status
toml = "0.8" # Для парсинга .toml файлов
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
dotenv = "0.15"
log = "0.4"
# Для логов
env_logger = "0.11"
regex = "1"
once_cell = "1"
# Arc для передачи разделяемых данных в обработчики
# использование std::sync::Arc;
dptree = "0.3" # Teloxide 0.15 может зависеть от dptree, укажем явно или дадим teloxide управлять
